[project]
name = "ai-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "dimoha_zadira",email = "DimohaZadira@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat (>=0.4.2,<0.5.0)",
    "autogen-ext[openai] (>=0.4.2,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
